# lunatic-midi

./: .gitignore  CMakeLists.txt  README.md  make.debug.sh  make.linux.sh  make.sh  makefile  makefile.linux  midi-controller.default.ini  midi-controller.ini
controller/: .gitignore  go.mod  go.sum  lib.c  main.go
doc/: devel.md  raspberry.md
driver/: CMakeLists.txt  CMakeLists.txt.old  README.md  lunatic-driver.default.ini  lunatic-driver.ini  make.clean.sh  make.debug.sh  make.release.sh  make.sh  midi-controller.default.ini
driver/lib/: exceptions.c  exceptions.h  gpio.c  i2c.c  i2c.h  ipc.h  log.h  utils.h  zini.cpp  zini.hpp
driver/lib/old/: ipc.hpp
driver/src/: api.c  api.h  buttons.c  console.c  console.h  debug.c  debug.h  globals.h  keyboard.c  keyboard.h  led_monitor.c  main.c  main.settings.c  main.settings.h  scheduler.c  scheduler.h  settings.c  settings.h  threads.api.c  threads.api.h  threads.c  threads.devices.c  threads.devices.h  threads.h  threads.midi.c  threads.midi.h
driver/src/devices/: analog.c  analog.h  buttons.c  buttons.h  devices.c  devices.h  events.c  events.h  keyboard.c  keyboard.h  ledstrip.c  ledstrip.h  types.h  worker.c  worker.h
driver/src/devices/modules/: analog.c  analog.h  buttons.c  buttons.h  keyboard.c  keyboard.h  ledstrip.c  ledstrip.h
driver/src/ipc/: ipc.c  ipc.h
driver/src/libs/: exceptions.c  exceptions.h  gpio.c  i2c.c  i2c.h  ini.h  log.c  log.h  utils.c  utils.h
driver/src/libs/old/: zini.cpp
driver/src/midi/: diagnostic.c  midi.c  midi.h
driver/src/old/: ipc.cpp  ledstrip.c.uart
driver/utils/: ads1115.c  midi.c  rxserial.c  virtual-midi.sh
lib/: exceptions.c  exceptions.h  gpio.c  gpio.h  i2c.c  i2c.h  ipc.cpp  ipc.h  ipc.hpp  log.c  log.h  midi.c  midi.h  utils.c  utils.h  zini.h
modules/: .gitignore
nbproject/: Makefile-Debug.mk  Makefile-Release.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Debug.bash  Package-Release.bash  configurations.xml  project.xml
src/: adc.c  adc.h  buttons.c  buttons.h  console.c  globals.h  keyboard.c  keyboard.h  led_monitor.c  led_monitor.h  main.c  main.c.bak  main.settings.c  main.settings.h  threads.c  threads.devices.c  threads.h
utils/: ads1115.c  (+4 more)
(+173 files in other folders)
